# bs4_parser

./: README.md  configs.py  constants.py  main.py  output.txt  outputs.py  pyproject.toml  requirements.txt  utils.py
results/: whats-new_2024-03-27_22-07-14.csv
