[project]
name = "bs4-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",
    "prettytable==3.10.0",
    "requests-cache==1.2.0",
    "requests==2.31.0",
    "soupsieve==2.5",
    "tqdm==4.66.2",
]
